Add styles sass

--- a/app/assets/scss/base/_body.scss
+++ b/app/assets/scss/base/_body.scss
@@ -82,20 +82,22 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: rgb(var(--foreground-rgb));
-    background: linear-gradient(to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)) !important;
+    // background: linear-gradient(to bottom,
+    //         transparent,
+    //         rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)) !important;
+    // background: linear-gradient(109.6deg, rgb(31, 50, 74) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);
+    background: linear-gradient(109.6deg, rgb(17, 37, 60) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%) !important;
 }
 
 html,
 body {
-    height: 100% !important;
+    height: auto;
     max-width: 100vw;
     overflow-x: hidden;
 }
 
-#body main {
-    height: 100%;
+#body {
+    padding-right: 0 !important;
 }
 
 h1,
@@ -144,3 +146,7 @@ ul li {
 // [tabindex="-1"]:focus:not(:focus-visible) {
 //     outline: 0 !important
 // }
+
+.navbar-toggler {
+    margin: 0 !important;
+}
